--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ body {
                 var Yn = {
                     [y]() {
                         We.$ = 380,
-                        be.$ = "#ddeaf0",
+                        be.$ = "#A9A9A9",
                         At.p.x = -260,
                         Yt.y = At.p.y + 200,
                         Xt.$ = ()=>{
@@ -934,7 +934,7 @@ body {
                         ,
                         ve.$ = 1,
                         $e.push(...Un()),
-                        xe.push(Ze(200, 400, 0, .5, [[0, "#ddeaf0"], [.9, "rgba(104,158,131,0.6)"]]), ...Qe(0, -40, 1250, 1, 1.5, 51), ...Qe(50, -50, 1250, 1, 1.1, 51), ...Qe(0, 30, 1250, 5, .9), ...Qe(50, 30, 1250, 5, .75, 8), ...Qe(20, 30, 1250, 5, .6, 8))
+                        xe.push(Ze(200, 400, 0, .5, [[0, "#A9A9A9"], [.9, "rgba(104,158,131,0.6)"]]), ...Qe(0, -40, 1250, 1, 1.5, 51), ...Qe(50, -50, 1250, 1, 1.1, 51), ...Qe(0, 30, 1250, 5, .9), ...Qe(50, 30, 1250, 5, .75, 8), ...Qe(20, 30, 1250, 5, .6, 8))
                     },
                     [c]: [()=>(Re && (Hn = Me.$[b],
                     xe.push(Ke(0, 0, ()=>Ee(61, ()=>{
@@ -1072,7 +1072,7 @@ body {
                   , Zn = ([t,e,n,l,o,a=[]],i)=>{
                     const s = n=>V((t + n.x) * l, (e + n.y + o.h / 2) * l);
                     xe.push(Ke(t, e, t=>Ee(11, e=>{
-                        e.fillStyle = "#415061",
+                        e.fillStyle = "#000000",
                         e.beginPath(),
                         o.p.forEach(n=>{
                             e.lineTo(...Vt((e=>V((t.p.x + e.x) * l, (t.p.y + e.y + o.h / 2) * l))(n)))
@@ -1470,7 +1470,7 @@ e.shadowOffsetY = 5;
                     t < e / 1.4545454545454546 && (e = 1.4545454545454546 * t),
                     e < 1.4545454545454546 * t && (t = e / 1.4545454545454546),
                     cl.style.width = Math.floor(t),
-                    cl.style.height = Math.floor(e+ 116),
+                    cl.style.height = Math.floor(e+ 190),
                     cl.width = Math.floor(t * xl),
                     cl.height = Math.floor(e * xl),
                     $l.textBaseline = "middle",
